<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_margin="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_uaf"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/use_after_free" />

        <Button
            android:id="@+id/button_uaf_loop"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/use_after_free_loop" />

        <Button
            android:id="@+id/button_oob"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/heap_out_of_bounds" />

        <Button
            android:id="@+id/button_oob_read_loop"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/heap_out_of_bounds_read_loop" />

        <Button
            android:id="@+id/button_double_free"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/double_free" />

        <Button
            android:id="@+id/button_null_deref"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/null_deref" />

        <Button
            android:id="@+id/button_java_crash"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/java_crash" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
